# siyi-sdk-cpp

./: CMakeLists.txt
doc/: gimbal-modes.txt
examples/: CMakeLists.txt
examples/siyi-example-get-info/: CMakeLists.txt  siyi-example-get-info.cpp
examples/siyi-example-raw1/: CMakeLists.txt  siyi-example-raw1.cpp
include/nonstd/: decimal.h  stdint128.h
include/siyi-sdk-cpp/: siyi.h
src/: siyi.cpp
tests/: CMakeLists.txt  a8_test.cpp
